<resources>
    <string name="app_name">My Application</string>
    <string name="button">Login</string>
    <string name="password">Password</string>
    <string name="id">Index</string>
    <string name="sign_up">Sign Up</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="sradiobutton">student</string>
    <string name="tradiobutton">teacher</string>
    <string name="rid">Index</string>
    <string name="batch">Level</string>
    <string name="rpassword">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="add_course">Add Course</string>
    <string name="start_lecture">Start Lecture</string>
    <string name="cbatch">Level</string>
    <string name="Cinsert">Submit</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="course_id">Course ID</string>
    <string name="course_name">Course Name</string>
    <string name="start_course_name">Course Name</string>
    <string name="search_and_join">Search and Join</string>
    <string name="connected_students">Connected Students: </string>
    <string name="end">END</string>
    <string-array name="Level">
        <item>Level</item>
        <item>1 - IT</item>
        <item>1 - a8sam</item>
        <item>2 - IT</item>
        <item>2 - a8sam</item>
        <item>3 - IT</item>
        <item>3 - a8sam</item>
        <item>4 - IT</item>
        <item>4 - a8sam</item>
        <item>5 - IT</item>
        <item>5 - a8sam</item>

    </string-array>
</resources>
