<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="100pt"
        android:layout_height="100pt"
        app:srcCompat="@drawable/ic_action_name"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/textInputLayoutpassword"
        tools:ignore="ExtraText">

        <EditText
            android:id="@+id/etid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="7dp"
        android:layout_marginTop="58dp" >

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etid"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/textInputLayoutpassword"
        android:layout_alignStart="@+id/textInputLayoutpassword">

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radioS"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sradiobutton" />

            <RadioButton
                android:id="@+id/radioT"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tradiobutton" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:text="@string/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        tools:text="Login"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp" />

</RelativeLayout>