<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/courseNameLayout"
    android:layout_above="@+id/startLec"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="48dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_course_name"
        android:id="@+id/CourseName"/>
</android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/startLec"

        android:layout_width="224dp"
        android:layout_height="100dp"
        android:background="@drawable/buttonshape"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:text="@string/start_lecture"
        android:textColor="#FCFFFD"
        android:textSize="30sp"
        android:layout_above="@+id/add"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:text="@string/add_course" />

</RelativeLayout>