<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etCourseName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"

            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/course_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_name"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/etCourseID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/etCbatch"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/course_id"
            android:inputType="textPersonName" />
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_batch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_tid"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/etCbatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etTID"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:hint="@string/cbatch"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_tid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_alignTop="@+id/input_layout_cid"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/etTID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/input_layout_name"
            android:layout_marginTop="63dp"
            android:ems="10"
            android:hint="@string/teacher_id"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="90dp"
        android:text="@string/Cinsert" />
</RelativeLayout>